Upgrade to java21